2009-06-23  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (adjust-arglist): Improved error message of named let.

        * lib/mosh/concurrent.ss: Fixed receive-internal.

2009-06-22  higepon  <higepon@users.sourceforge.jp>

        * Added createDirectory, deleteFileOrDirectory, isDirectory, renameFile, isExecutable, isRegular, isSymbolicLink
                createSymbolicLink.

2009-06-19  higepon  <higepon@users.sourceforge.jp>

        * OSCompatThread.h (scheme): Added Thread for Windows (not working).

2009-06-18  higepon  <higepon@users.sourceforge.jp>

        * TextualOutputPort.cpp : Uses FlonumUtil::flonumToUcs4String for display/write.

        * UtilityProcedures.cpp : Uses FlonumUtil::flonumToUcs4String for number->string.

        * Arithmetic.h : Added FlonumUtil for reading/writing flonum.

2009-06-17  higepon  <higepon@users.sourceforge.jp>

        * ListProcedures.cpp : Added vector-set!, vector-ref, vector-length and make-vector. Thanks to mrc.mgg.

2009-06-16  higepon  <higepon@users.sourceforge.jp>

        * Arithmetic.cpp (numberToString): Fixed number->string +nan.0, +inf.0 and -inf.0 . Thanks to mrc.mgg.

2009-06-15  higepon  <higepon@users.sourceforge.jp>

        * OSCompatThread.h : Writing Thread library for Windows, not completed.

        * tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss: Fixed load-library-path. Thanks to mrc.mgg.

        * VM-inl.h: Added #include pointed out by mrc.mgg.

        * OSCompatThread.h : Fixed condition-variable-wait!. Thanks to Shiro Kawai for pointing out the bug.

2009-06-12  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/concurrent.ss: Added document.

2009-06-11  higepon  <higepon@users.sourceforge.jp>

        * Added one argument to spawn.

2009-06-10  higepon  <higepon@users.sourceforge.jp>

        * OSCompatThread.h : Conditional variables waitWithTimeout works.

2009-06-09  higepon  <higepon@users.sourceforge.jp>

        * test/concurrent-crash.ss : Added.
